[gd_scene load_steps=30 format=2]

[ext_resource path="res://Ressources/font/04B_30__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/BackGrd1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ressources/ciel.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://Scenes/tilemap.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Area2D_Champignon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ressources/Animation_personnage_petit.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Scripts/MenuFontions.gd" type="Script" id=8]
[ext_resource path="res://Ressources/collisionShape_personnage_petit.tres" type="Shape2D" id=9]
[ext_resource path="res://Scenes/Mario.gd" type="Script" id=10]
[ext_resource path="res://Ressources/SmokeFX Lite 3A sheet.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Gomba.tscn" type="PackedScene" id=12]
[ext_resource path="res://Mario1/Tilesets/OverWorld.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 33, 1, 14, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="DynamicFont" id=8]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1344, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1408, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1472, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1536, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1600, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1664, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Node2D2" type="Node2D"]
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 1921.0
margin_bottom = 1081.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 25.6787
margin_top = 38.3394
margin_right = 699.679
margin_bottom = 283.339
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 674.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jouer" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 674.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
text = "Jouer"
flat = true
align = 0

[node name="Instru" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 674.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
text = "Instructions"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controles" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 674.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
text = "Controles"
flat = true
align = 0

[node name="Quitter" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 249.0
margin_right = 674.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
text = "Quitter"
flat = true
align = 0

[node name="Node2D" type="Node2D" parent="Control"]
visible = false
z_index = 8

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Node2D"]
margin_left = 481.0
margin_top = 278.0
margin_right = 1485.0
margin_bottom = 813.0
custom_fonts/normal_font = SubResource( 4 )
text = "Vous jouez le personnage de mario

Votre but est d'atteindre le chateau qui se trouve a la fin de chaque niveau

Block qui donne des objets speciaux ->

Block qui sont destructibles        ->

Les Etat de mario:
	- Fleur feu -> Peut tirer des boules de feu
				   si il prend du degat, il devient 				   grand
				
	-Grand -> Aucune specialite mais il devient 			  petit si il prend du degat
	
	-Petit -> Attention vous mourez et devrez 			  tout recommencer si vous prenez 			  du degat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Node2D"]
position = Vector2( 983.296, 527.682 )
scale = Vector2( 102.028, 50.0555 )
z_index = -1
texture = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="Control/Node2D"]
position = Vector2( 1274.49, 413.888 )
scale = Vector2( 3, 3 )
texture = SubResource( 6 )

[node name="Sprite3" type="Sprite" parent="Control/Node2D"]
position = Vector2( 1274.44, 475.3 )
scale = Vector2( 3, 3 )
texture = SubResource( 7 )

[node name="ButtonInstru" type="Button" parent="Control/Node2D"]
margin_left = 1493.0
margin_top = 228.0
margin_right = 1596.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2DControle" type="Node2D" parent="Control"]
visible = false
z_index = 8

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Node2DControle"]
margin_left = 485.238
margin_top = 373.352
margin_right = 1489.24
margin_bottom = 654.352
custom_fonts/normal_font = SubResource( 9 )
text = "Sauter -> W/espace/fleche du haut

Droite -> D/Fleche de droite

Gauche -> A/Fleche de gauche

Tirer -> J/click Gauche"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Node2DControle"]
position = Vector2( 983.296, 527.682 )
scale = Vector2( 102.028, 50.0555 )
z_index = -1
texture = SubResource( 5 )

[node name="ButtonControle" type="Button" parent="Control/Node2DControle"]
margin_left = 1493.0
margin_top = 228.0
margin_right = 1596.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGrd1" parent="." instance=ExtResource( 2 )]
position = Vector2( 1517.71, 704.428 )
z_index = -3

[node name="ciel" type="Sprite" parent="."]
position = Vector2( 947.177, 547.839 )
scale = Vector2( 1.57806, 1.16028 )
z_index = -9
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 655374, 2, 0, 1048538, 1, 0, 1048539, 1, 0, 1048540, 1, 0, 1048541, 1, 0, 1048542, 1, 0, 1048543, 1, 0, 1048544, 1, 0, 1048545, 1, 0, 1048546, 1, 0, 1048547, 1, 0, 1048548, 1, 0, 1048549, 1, 0, 1048550, 1, 0, 1048551, 1, 0, 1048552, 1, 0, 1048553, 1, 0, 1048554, 1, 0, 1048555, 1, 0, 1048556, 1, 0, 1048557, 1, 0, 1048558, 1, 0, 1048559, 1, 0, 1048560, 1, 0, 1048561, 1, 0, 1048562, 1, 0, 1048563, 1, 0, 1048564, 1, 0, 1048565, 1, 0, 1048566, 1, 0, 1048567, 1, 0, 1048568, 1, 0, 1048569, 1, 0, 1048570, 1, 0, 1048571, 1, 0, 1048572, 1, 0, 1048573, 1, 0, 1048574, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 1, 0, 983082, 1, 0, 983083, 1, 0, 983084, 1, 0, 983085, 1, 0, 983086, 1, 0, 983087, 1, 0, 983088, 1, 0, 983089, 1, 0, 983090, 1, 0, 983091, 1, 0, 983092, 1, 0, 983093, 1, 0, 983094, 1, 0, 983095, 1, 0, 983096, 1, 0, 1114086, 1, 0, 1114087, 1, 0, 1114088, 1, 0, 1114089, 1, 0, 1114090, 1, 0, 1114091, 1, 0, 1114092, 1, 0, 1114093, 1, 0, 1114094, 1, 0, 1114095, 1, 0, 1114096, 1, 0, 1114097, 1, 0, 1114098, 1, 0, 1114099, 1, 0, 1114100, 1, 0, 1114101, 1, 0, 1114102, 1, 0, 1114103, 1, 0, 1114104, 1, 0, 1114105, 1, 0, 1114106, 1, 0, 1114107, 1, 0, 1114108, 1, 0, 1114109, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 1048618, 1, 0, 1048619, 1, 0, 1048620, 1, 0, 1048621, 1, 0, 1048622, 1, 0, 1048623, 1, 0, 1048624, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 1, 0, 1048629, 1, 0, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0 )

[node name="Area2D_Champignon" parent="." instance=ExtResource( 6 )]
position = Vector2( 928, 672 )

[node name="goomba" parent="." instance=ExtResource( 12 )]
position = Vector2( -2312.99, 912.439 )
scale = Vector2( 4, 4 )
dir_initiale = 1

[node name="Mario" type="KinematicBody2D" parent="."]
position = Vector2( -447.779, 892.776 )
scale = Vector2( 4, 4 )
collision_mask = 19
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mario"]
frames = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mario"]
position = Vector2( 0, 7.416 )
shape = ExtResource( 9 )

[node name="AnimatedSpriteGauche" type="AnimatedSprite" parent="Mario"]
visible = false
position = Vector2( -11.5502, 11.6097 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 16 )
frame = 5
playing = true

[connection signal="button_down" from="Control/HBoxContainer/VBoxContainer/Jouer" to="Control" method="_on_Jouer_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/VBoxContainer/Instru" to="Control" method="_on_Instru_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/VBoxContainer/Controles" to="Control" method="_on_Controles_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/VBoxContainer/Quitter" to="Control" method="_on_Quitter_button_down"]
[connection signal="button_down" from="Control/Node2D/ButtonInstru" to="Control" method="_on_ButtonInstru_button_down"]
[connection signal="button_down" from="Control/Node2DControle/ButtonControle" to="Control" method="_on_ButtonControle_button_down"]
